--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ two_columns_layout: true
 
 
 # Advanced Settings
-baseurl: "https://jobinsonworks.github.io/" # the subpath of your site, e.g. /blog
+baseurl: ""  # "https://jobinsonworks.github.io/" # the subpath of your site, e.g. /blog
 url: "https://jobinsonworks.github.io/" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 language: "en"
