--- a/_config.yml
+++ b/_config.yml
@@ -30,11 +30,11 @@ formspree_form_id: formspree_form_id
 # Social Media Settings
 # Remove the item if you don't need it
 github_username: pjobinson
-facebook_username: facebook_username
-twitter_username: twitter_username
-instagram_username: instagram_username
-linkedin_username: linkedin_username
-medium_username: medium_username
+facebook_username: 
+twitter_username: 
+instagram_username: 
+linkedin_username: 
+medium_username: 
 
 
 # Posts Settings
@@ -45,9 +45,9 @@ two_columns_layout: true
 
 
 # Advanced Settings
-baseurl: ""  # "https://jobinsonworks.github.io/" # the subpath of your site, e.g. /blog
-url: "https://pjobinson.github.io/" # the base hostname & protocol for your site
-google_analytics: "UA-XXXXXXXX-X"
+baseurl: ""   # the subpath of your site, e.g. /blog
+url: "https://pjobinson.github.io" # the base hostname & protocol for your site
+#google_analytics: "UA-XXXXXXXX-X"
 language: "en"
 categories_folder: category
 sent_message_url: "/contact/message-sent/"
