updated home url in config

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ tags:
 show_hero: true
 menu:
   - title: Home
-    url: /
+    url: jobinsonworks.com
   - title: About
     url: /about
   - title: Contact
