--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ tags:
 show_hero: true
 menu:
   - title: Home
-    url: jobinsonworks.com
+    url: /
   - title: About
     url: /about
   - title: Contact
@@ -44,7 +44,7 @@ two_columns_layout: true
 
 
 # Advanced Settings
-baseurl: "https://pjobinson.github.io"   # the subpath of your site, e.g. /blog
+baseurl: ""   # the subpath of your site, e.g. /blog
 url: "https://jobinsonworks.com/" # the base hostname & protocol for your site
 #google_analytics: "UA-XXXXXXXX-X"
 language: "en"
