--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ tags:
 show_hero: true
 menu:
   - title: Home
-    url: /home
+    url: /
   - title: About
     url: /about
   - title: Contact
@@ -20,7 +20,7 @@ menu:
     url: /feed.xml
 email: pjobinson@gmail.com
 # See: https://disqus.com/
-disqus_username: disqus_username
+disqus_username: jobinsonpd
 # Contact Form Setting
 # See: https://formspree.io/
 formspree_form_id: formspree_form_id
